Commiting source code v1.0

--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "blogging",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://hardik25.github.io/blogging/",
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +29,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
+  "description": "A react-redux app created to emulate blogging, fetching dummy data from JSONPlaceholder testing API.",
+  "main": "index.js",
+  "author": "Hardik Tewari",
+  "license": "ISC"
 }
